--- a/static/src/styles.css
+++ b/static/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/tailwind-light/theme.css";
+@import "primeng/resources/primeng.css";
+@import "primeflex/primeflex.css";
+@import "bootswatch/dist/cosmo/bootstrap.css";
+@import "primeicons/primeicons.css";
+
+body {
+    font-family: var(--font-family);
+    margin: 0;
+}
+
+p-menubarsub {
+    margin-left: 10px;
+}
