Add education in profile

--- a/static/src/app/profile/profile-education.component.html
+++ b/static/src/app/profile/profile-education.component.html
@@ -1,1 +1,37 @@
-<p>profile-education works!</p>
+<section id="profile-education">
+    <div class="container pt-5 pb-5">
+        <h2>Education</h2>
+        <div class="row">
+            <div class="col-lg-6">
+                <h4 class="mt-5">Bachelor of Technology, MIT Academy of Engineering</h4>
+                <div class="row">
+                    <div class="col-lg-6 col-md-4 col-sm-6">
+                        <i class="pi pi-calendar mr-2"></i>
+                        <i>August 2017 - October 2020</i>
+                    </div>
+                    <div class="col-lg-6 col-md-4 col-sm-6">
+                        <i class="pi pi-map-marker mr-2"></i>
+                        <i>Pune, India</i>
+                    </div>
+                </div>
+                <br />
+                <ul><li><b>Computer Engineering</b></li></ul>
+            </div>
+            <div class="col-lg-6">
+                <h4 class="mt-5">Polytechnic Diploma, Government Polytechnic</h4>
+                <div class="row">
+                    <div class="col-lg-6 col-md-4 col-sm-6">
+                        <i class="pi pi-calendar mr-2"></i>
+                        <i>October 2014 - October 2017</i>
+                    </div>
+                    <div class="col-lg-6 col-md-4 col-sm-6">
+                        <i class="pi pi-map-marker mr-2"></i>
+                        <i>Pune, India</i>
+                    </div>
+                </div>
+                <br />
+                <ul><li><b>Computer Engineering</b></li></ul>
+            </div>
+        </div>
+    </div>
+</section>
