--- a/static/src/styles.css
+++ b/static/src/styles.css
@@ -89,3 +89,16 @@ p-menubarsub {
     padding: 0 5px;
     font-weight: 500;
 }
+
+#profile-experience {
+    background-image: url("/assets/work-bg.jpg");
+    background-attachment: fixed;
+}
+
+#profile-experience > div {
+    background-color: rgba(255,255,255,0.8);
+}
+
+#profile-education {
+    background-color: #E0E0E0;
+}
