--- a/static/src/app/projects/projects.component.html
+++ b/static/src/app/projects/projects.component.html
@@ -1,1 +1,5 @@
-<p>projects works!</p>
+<div class = "container-fluid" style="padding-top:75px;">
+<div class="card">
+    <p-tabMenu [model]="items"></p-tabMenu>
+</div>
+</div>
